--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,15 @@ body {
 
 /* Header */
 
-/* .page-header {
-  height: 80px;
-} */
+.page-header {
+  border: 1px solid #ececec;
+}
 
 .container {
-  width: 1170px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  padding: 0;
 }
 
 .nav-media {
@@ -251,6 +250,9 @@ body {
   background-color: var(--primary-bg-color);
   text-align: center;
   width: 270px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member {
@@ -307,11 +309,25 @@ body {
 
 /* portfolio */
 
-.filter {
-  list-style: none;
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
-.filter .button.primary {
+.filter {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding-bottom: 50px;
+  padding-left: 0;
+  margin: 0;
+}
+
+.filter .item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filter .button.current {
   color: var(--white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -324,9 +340,12 @@ body {
   letter-spacing: 0.03em;
   font-family: inherit;
   cursor: pointer;
+  padding: 6px 22px;
+  border: 0px;
+  margin: auto;
 }
 
-.filter .button.secondary {
+.filter .button {
   color: var(--title-text-color);
   background-color: var(--button-background);
   border-radius: 4px;
@@ -337,16 +356,45 @@ body {
   letter-spacing: 0.03em;
   font-family: inherit;
   cursor: pointer;
+  padding: 6px 22px;
+  border: 0px;
+  margin: auto;
 }
 
 .examples {
+  display: flex;
+  flex-wrap: wrap;
   list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.example-list {
+.examples > .example-list {
   background-color: var(--white-color);
-  border: 1px solid #eeeeee;
   box-sizing: border-box;
+  margin-right: 30px;
+  margin-bottom: 30px; */
+  width: 370px; 
+}
+
+.example-list:nth-child(3n) {
+  margin-right: 0;
+}
+
+.example-list:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.example-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.example {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
 }
 
 .example-name {
@@ -355,6 +403,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .example-filter {
