--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --secondary-bg-color: rgba(47, 48, 58, 1);
   --white-color: rgba(255, 255, 255, 1);
   --button-background: rgba(245, 244, 250, 1);
+  --card-set-gap: 30px;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 /* Header */
 
 .page-header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .container {
@@ -54,6 +55,12 @@ body {
   margin-right: 50px;
 }
 
+.site-nav .item,
+.site-media .item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .site-media .item:not(:last-child) {
   margin-right: 50px;
 }
@@ -66,8 +73,8 @@ body {
   line-height: 1.192;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-bottom: 25px;
-  margin-top: 24px;
+  padding-bottom: 25px;
+  padding-top: 24px;
 }
 
 .logo-primary {
@@ -120,6 +127,8 @@ body {
 
 .hero {
   background-color: var(--secondary-bg-color);
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -175,8 +184,8 @@ body {
   line-height: 1.167;
   text-align: center;
   letter-spacing: 0.03em;
-  padding-bottom: 50px;
   margin: 0;
+  margin-bottom: 50px;
 }
 
 .features {
@@ -255,15 +264,18 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
+.member-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .team-member {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
   letter-spacing: 0.03em;
-  margin: 0;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  margin: 0 0 10px 0;
 }
 
 .team-position {
@@ -272,7 +284,6 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   margin: 0;
-  padding-bottom: 30px;
 }
 
 /* footer */
@@ -284,8 +295,9 @@ body {
 .footer .logo {
   display: inline-block;
   color: var(--white-color);
-  margin-top: 60px;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
+  padding: 0;
+  padding-top: 60px;
 }
 
 .address {
@@ -299,7 +311,12 @@ body {
   letter-spacing: 0.03em;
   list-style: none;
   padding-left: 0;
-  margin-bottom: 60px;
+  margin: 0;
+  padding-bottom: 60px;
+}
+
+.address .item {
+  margin: 0;
 }
 
 .footer .media {
@@ -318,9 +335,8 @@ body {
   display: flex;
   justify-content: center;
   list-style: none;
-  padding-bottom: 50px;
   padding-left: 0;
-  margin: 0;
+  margin: 0 0 50px 0;
 }
 
 .filter .item:not(:last-child) {
@@ -365,25 +381,18 @@ body {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+  padding: 0;
+  margin: 0;
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
 }
 
 .examples > .example-list {
   background-color: var(--white-color);
   box-sizing: border-box;
-  margin-right: 30px;
-  margin-bottom: 30px; */
-  width: 370px; 
-}
-
-.example-list:nth-child(3n) {
-  margin-right: 0;
-}
-
-.example-list:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+  flex-basis: calc(100% / 3 - var(--card-set-gap));
+  margin-left: var(--card-set-gap);
+  margin-top: var(--card-set-gap);
 }
 
 .example-image {
@@ -403,6 +412,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin: 0;
   margin-bottom: 4px;
 }
 
@@ -410,4 +420,5 @@ body {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.03em;
+  margin: 0;
 }
